; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_open_devcrypto.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_open_devcrypto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cfd = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [12 x i8] c"/dev/crypto\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"Could not open /dev/crypto: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @open_devcrypto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @open_devcrypto() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @cfd, align 8
  %3 = icmp sge i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %20

5:                                                ; preds = %0
  %6 = load i32, i32* @O_RDWR, align 4
  %7 = call i64 @open(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %6, i32 0)
  store i64 %7, i64* @cfd, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %5
  %10 = load i64, i64* @errno, align 8
  %11 = load i64, i64* @ENOENT, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %18

13:                                               ; preds = %9
  %14 = load i32, i32* @stderr, align 4
  %15 = load i64, i64* @errno, align 8
  %16 = call i8* @strerror(i64 %15)
  %17 = call i32 @fprintf(i32 %14, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  br label %18

18:                                               ; preds = %13, %9
  store i32 0, i32* %1, align 4
  br label %20

19:                                               ; preds = %5
  store i32 1, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %18, %4
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i64 @open(i8*, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @strerror(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
